[package]
name = "minesweeper_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
rayon = "1.5.1"
structopt = "0.3.22"
rand = "0.8.4"



[profile.dev]
opt-level = 3
panic='abort'
debug=true

[profile.test]
opt-level = 0
